Fixes to gaps

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@
 .scroll-align {
     scroll-snap-align: start;
     height: 100vh;
+    scroll-snap-stop: always;
 }
 
 .scroll-none {
